samples/error/pause.plis
lock l0
wait l0
end
